--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_complete_guide
-description: A new Flutter project.
+name: Expense-Manager
+description: Handle your Expenses and keep track of them.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
